css/phenogrid.css
#phenogrid_container{
	font-family: Arial, Helvetica, sans-serif;
	font-size: 14px;
}

#phenogrid_container .a_text {
	text-anchor:end; /* If removed, Y legend will overlap to the grid */
	opacity: 1.0;
	font-size: 12px;
}

#pg_errmsg {
	padding-top: 30px;
	font-size:1.2em;
	/**font-weight:bold;*/
	stroke:#ea763b;
}

#pg_gridline {
	fill: #fff;
	fill-opacity: 0;
	stroke: #e5e5e5;
	stroke-width: 1;
}

#pg_globalview {
	fill: #fff;
	stroke: #000;
	stroke-width: 2;
}


.pg_row_accent,
.pg_col_accent {
	/*stroke:#ea763b;*/
	stroke:#4CA092;
	stroke-width: 2;
	fill: #4CA092;   /*#fff;*/
	fill-opacity: 0.1;    /*0.05;*/
}

/*.pg_gene_accent {
	/*stroke:#ea763b;*/
	stroke:#4CA092;
	stroke-width: 2;
	fill: #4CA092;
	fill-opacity: 0.1;
}*/

.pg_scroll_text {
	font-size: 9px;
}

#pg_prebl {
	clear:both;
	/*background-color: #9999FF;*/
	float:left;
}



#pg_scorelist {
	font-size:10px;
	fill: #0F473E;
}


#pg_hpoDiv {
	text-align:left;
}

#pg_selectionrect {
	fill: grey;
	opacity: 0.5
}

.pg_instruct {
	font-size:12px;
}

.pg_tip {
	width: 80px;
	height:10px;
	font-size:10px;
}

#pg_diseasetitle {
	font-weight:bold;
	font-size: 0.8em;
	margin-left:-20px;
}


#pg_toptitle {
	font-size:1.4em;
	font-weight:bold;
}

#pg_org_div {
	float: left;
	width:140px;
}

#pg_sort_div {
	float: left;
	width:180px;
}

#pg_calc_div {
	float: left;
	width:120px;
}

label.pg_ctrl_label{
	font-weight:700;
}

#pg_axis_div {
	float: left;
	width: 120px;
}


#pg_organism,
#pg_calculation,
#pg_sortphenotypes,
#pg_axisflip {
	margin-top: 5px; 
	margin-left: 5px;
}


#pg_detail_content {
	font-size: 10px;
	padding: 8px;
	background: #fff;
	border: 1px solid #000;
	box-shadow: 5px 5px 8px #818181;
	-webkit-box-shadow: 5px 5px 8px #818181;
	-moz-box-shadow: 5px 5px 8px #818181;
	z-index:500;
}

.stickytooltip{
	box-shadow: 5px 5px 8px #818181; /*shadow for CSS3 capable browsers.*/
	-webkit-box-shadow: 5px 5px 8px #818181;
	-moz-box-shadow: 5px 5px 8px #818181;
	display:none;
	position:absolute;
	display:none;
	border:1px solid #000;
	background:#fff;
	z-index:3000;
	font:10px Arial;
}


.stickytooltip .stickystatus{ /*Style for footer bar within tooltip*/
	background:black;
	color:white;
	padding-top:5px;
	text-align:center;
	font:bold 11px Arial;
}


#pg_logo {
	height:90px;
}

/** Overwrite jquery-ui default style */

.ui-dialog-content {
	font-size:11px;
	font-family: arial;
	color:#000;
}

/* End jquery-ui stuff*/

/*#redtext,
#bluetext,
#greentext {
	fill: black;
}

#matches input {
	padding-top:5px;
}*/

#pg_matches,
#pg_unmatchedlabel,
#pg_unmatchedlabelhide {
	clear:both;
	font-weight: bold;
	color: rgb(68,162,147);
	margin-top: 5px;
	margin-left: 10px;
	margin-bottom:20px;
}

#pg_unmatched a {
	margin-left:19px;
}

#pg_unmatched table {
	font-size: 0.8em;
	padding-bottom:10px;
	margin-top:10px;
}

#phenogrid_controls {
	margin-left:10px;
}

.cursor_pointer {
cursor:pointer;
}

#pg_svg_container {
	margin-top:40px;
}

#pg_specieslist {
	font-weight:bold;
	font-size:1.2em;
}


/** for spinner*/
.cube1,
.cube2 {
	background-color: #333;
	width: 10px;
	height: 10px;
	top: 100;
	left: 300;

	-webkit-animation: cubemove 1.8s infinite ease-in-out;
	animation: cubemove 1.8s infinite ease-in-out;
}

.cube2 {
	-webkit-animation-delay: -0.9s;
	animation-delay: -0.9s;
}

@-webkit-keyframes cubemove {
	25% { -webkit-transform: translateX(42px) rotate(-90deg) scale(0.5) }
	50% { -webkit-transform: translateX(42px) translateY(42px) rotate(-180deg) }
	75% { -webkit-transform: translateX(0px) translateY(42px) rotate(-270deg) scale(0.5) }
	100% { -webkit-transform: rotate(-360deg) }
}

@keyframes cubemove {
	25% { 
		transform: translateX(42px) rotate(-90deg) scale(0.5);
		-webkit-transform: translateX(42px) rotate(-90deg) scale(0.5);
	} 50% { 
		transform: translateX(42px) translateY(42px) rotate(-179deg);
		-webkit-transform: translateX(42px) translateY(42px) rotate(-179deg);
	} 50.1% { 
		transform: translateX(42px) translateY(42px) rotate(-180deg);
		-webkit-transform: translateX(42px) translateY(42px) rotate(-180deg);
	} 75% { 
		transform: translateX(0px) translateY(42px) rotate(-270deg) scale(0.5);
		-webkit-transform: translateX(0px) translateY(42px) rotate(-270deg) scale(0.5);
	} 100% { 
		transform: rotate(-360deg);
		-webkit-transform: rotate(-360deg);
	}
}

#unmatchedimg,
#unmatchedhideimg {
	font-size:1.1em;
	font-weight:bold;
	color: #428bca;
	vertical-align:middle;
}

#unmatchedimg {
	font-size:1.4em;
}

.clearfix:after {
	content: " "; /* Older browser do not support empty content */
	visibility: hidden;
	display: block;
	height: 0;
	clear: both;
}

.faqdialog {
	background: white;
}

.expandbtn {
    padding: 0;
    border: none;
    background: transparent url('../image/ExpandAllIcon.png') no-repeat;
    margin-left: auto;
    margin-right: auto;
    width: 18px;
    height: 17px;
	background-color: white;
	/* box-shadow: 1px 1px 1px #888888; */
}

.collapsebtn {
    padding: 0;
    border: none;
    background: transparent url('../image/CollapseAllIcon.png') no-repeat;
    margin-left: auto;
    margin-right: auto;    
    width: 18px;
    height: 17px;
	background-color: white;
	//box-shadow: 1px 1px 1px #888888;	
}

.dialogBG {
	background-color: white;
}

/*.spinner {
	background: url('../image/throbber.gif') no-repeat;
	top: 10px;
	left: 100px;
	position: absolute;
}*/

